--- a/app/views/blogs/ts_polycet_results.html.erb
+++ b/app/views/blogs/ts_polycet_results.html.erb
@@ -48,7 +48,7 @@
 <h4 class="text-center">Check Below Link For Information TS POLYCET 2017</h4>
 
 <h4 class="text-center">
-<a href="https://polycetts.nic.in/rank_card.aspx" target="_blank">TS POLYCET 2017 RESULTS</a></h4>
+<a href="https://polycetts.nic.in/" target="_blank">TS POLYCET 2017 RESULTS</a></h4>
 
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
@@ -61,7 +61,7 @@
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
 <h4 class="text-center">
-<a href="https://polycetts.nic.in/rank_card.aspx" target="_blank">DOWNLOAD TS POLYCET 2017 RANK CARDS</a></h4>
+<a href="https://polycetts.nic.in/" target="_blank">DOWNLOAD TS POLYCET 2017 RANK CARDS</a></h4>
 
 <br><br>
 <div class="text-success">
