--- a/app/views/blogs/ap_eamcet_results.html.erb
+++ b/app/views/blogs/ap_eamcet_results.html.erb
@@ -1,5 +1,6 @@
 <% content_for :title, "AP EAMCET RESULTS 2017 | MANABADI @ sche.ap.gov.in" %>
 <% content_for :description, "AP-EAMCET-RESULTS-2017 | MANABADI @ sche.ap.gov.in"%>
+<% content_for :time, "2017-05-06T14:50:00+05:30" %>
 
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
