--- a/app/views/blogs/ap_ssc_results.html.erb
+++ b/app/views/blogs/ap_ssc_results.html.erb
@@ -1,11 +1,18 @@
 <% content_for :title, "AP SSC RESULTS 2017 - Andhra Pradesh SSC MARKS NAME WISE @ MANABADI , Schools9" %>
 <% content_for :description, "TS-POLYCET-RESULTS-2017 | MANABADI @ polycetts.nic.in"%>
+<% content_for :time, "2017-05-06T14:50:00+05:30" %>
 
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
  <div class="panel" style="padding-left: 8%; padding-right: 8%; padding-top:5%; padding-bottom: 5%">
 
 <br>
+<script>
+function myFunction() {
+    alert("Try Again");
+    location.reload(); 
+}
+</script>
 <div class="social-share">
     <h4>Share on</h4>
     
@@ -32,8 +39,19 @@
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-
-<br>
+<div class="text-center">                
+<h2 class="text-success">AP SSC RESULTS 2017</h2>
+<b class="text-success">HALL TICKET</b> <input type="text" name="ht"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-info" onclick="myFunction()">Submit</button></div>
+<script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- school9edu_main_Blog1_1x1_as -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-7665698555914778"
+                         data-ad-slot="9074553645"
+                         data-ad-format="auto"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
 <p><b>AP SSC RESEULTS 2017:</b> Andhra Pradesh SSC Results will be available at Official Website : bse.ap.gov.in and Also Available Other Education Services Websites Schools9.com and Manabadi.com. Check AP SSC Results (CLASS X), ap 10th results 2017. Students can able to get AP SSC 10th Class board exam Result in 2017 that is from the online right way. To check their result you need to use their roll number And Name Wise. AP SSC 10th class Exams are conducted in the Month of March/April 2017 will publish their results in the Month of May 2nd Week 2017.</p><br>
 <p>Directorate of Government Examinations, Andhra Pradesh has successfully conducted AP SSC examinations in the month of March 2017. The students who are waiting for the AP SSC results can check their AP 10th class results, date of release and time can check the result on the official website bse.ap.gov.in or from the link provided below Once It Is Released.</p>
 <br>
