--- a/app/views/blogs/ecettips.html.erb
+++ b/app/views/blogs/ecettips.html.erb
@@ -1,5 +1,6 @@
 <% content_for :title, "ECET SYLLABUS WEIGHTAGE MARKS TIPS" %>
 <% content_for :description, "ECET SYLLABUS WEIGHTAGE MARKS TIPS"%>
+<% content_for :time, "2017-05-06T14:50:00+05:30" %>
 <style>
 
 div.double {border-style: double;}
