--- a/app/views/blogs/question_paper.html.erb
+++ b/app/views/blogs/question_paper.html.erb
@@ -1,5 +1,6 @@
 <% content_for :title, "ECET QUESTION PAPERS AND KEYS 2017" %>
 <% content_for :description, "ECET QUESTION PAPERS AND KEYS 2017"%>
+<% content_for :time, "2017-05-06T14:50:00+05:30" %>
 
 <script type="text/javascript">
 	var blink_speed = 500;
