--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,25 +3,29 @@
 <head>
   
   <title><%= yield(:title) %></title>
+  <meta property="og:title" content="<%= yield(:title) %>" />
+  <meta charset="utf-8">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  <meta name="keywords" name="Ap sbtet results,Ap Sbtet diploma results,Apsbtet results 2017,Manabadi sbtet results,Ap sbtet 2017 results,Ap Sbtet results,Ap Sbtet results 2017 c14,Ap Sbtet results 2017 c16,Ap Sbtet results 2017,Ap Sbtet results,sbtet results,Sbtet ap results,Ap sbtet results,Ts Sbtet diploma results,Tssbtet results 2017,Manabadi sbtet results,Ts sbtet 2017 results,Ts Sbtet results,Ts Sbtet results 2017 c14,Ts Sbtet results 2017 c16,Ts Sbtet results 2017,Ts Sbtet results, TS SBTET, AP SBTET, SBTET">
-<meta name='description' content=<%= yield(:description) %> >
+  <meta name='description' content=<%= yield(:description) %> >
+  <meta property="og:description" content="<%= yield(:description) %>" />
 
-
-<meta property="article:published_time" content=<%= Time.now %> />
-<meta property="article:modified_time" content=<%= Time.now %> />
-<meta name="robots" content="all">
-<meta name="googlebot" content="index, follow">
-<meta name="robots" content="index, follow">
-
-
+  <meta name="keywords" content="<%= yield(:keywords) %>">
+  <meta name="twitter:title" content="<%= yield(:title) %>" />
+  <meta name="twitter:description" content="<%= yield(:description) %>" />
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+  <meta name="twitter:widgets:csp" content="on">
+  <title>Neet | Local</title>
   <meta name="google-site-verification" content="Hkjj2HdvwtIjG9-vQXd3hQMfGgJ7STiY9OCTwIbg2uc" />
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="article:published_time" content="<%= yield(:time) %>" />
+  <meta property="article:modified_time" content="<%= yield(:time) %>" />
+  <meta name="robots" content="all">
+  <meta name="googlebot" content="index, follow">
+  <meta name="robots" content="index, follow">
+  
+  
   <!-- <link href="/assets/bootstrap.min.css" rel="stylesheet" type="text/css" /> -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
    <link rel="icon" href="/images/sbtetworld.png" type='image/x-icon'> 
@@ -36,10 +40,8 @@
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
             ga('create', 'UA-91430718-2', 'auto');
             ga('send', 'pageview');
-
         </script>
 
 
@@ -49,9 +51,7 @@
               google_ad_client: "ca-pub-7665698555914778",
               enable_page_level_ads: true
             });
-          </script>
-
-  
+          </script>  
 </head>
 
 <% if request.original_fullpath == "/ecet-syllabus-weightage-marks-tips" %>
