--- a/app/views/blogs/ap_ssc_results.html.erb
+++ b/app/views/blogs/ap_ssc_results.html.erb
@@ -9,7 +9,7 @@
 <br>
 <script>
 function myFunction() {
-    alert("Try Again");
+    alert("Server too Busy,Plaese Try Again");
     location.reload(); 
 }
 </script>
@@ -41,7 +41,7 @@ function myFunction() {
                     </script>
 <div class="text-center">                
 <h2 class="text-success">AP SSC RESULTS 2017</h2>
-<b class="text-success">HALL TICKET</b> <input type="text" name="ht"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-info" onclick="myFunction()">Submit</button></div>
+<b class="text-success">HALL TICKET</b> <input type="text" name="ht" ><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-info" onclick="myFunction()">Submit</button></div>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
