--- a/app/views/blogs/ap_ssc_results.html.erb
+++ b/app/views/blogs/ap_ssc_results.html.erb
@@ -9,6 +9,7 @@
 <br>
 <script>
 function myFunction() {
+
     alert("Server too Busy,Plaese Try Again");
     location.reload(); 
 }
@@ -41,7 +42,17 @@ function myFunction() {
                     </script>
 <div class="text-center">                
 <h2 class="text-success">AP SSC RESULTS 2017</h2>
-<b class="text-success">HALL TICKET</b> <input type="text" name="ht" ><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-info" onclick="myFunction()">Submit</button></div>
+<b class="text-success">HALL TICKET</b> <input type="text" name="ht" >
+<script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="8409268847"
+                     data-ad-format="link"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-info" onclick="myFunction()">Submit</button></div>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
