--- a/app/views/blogs/ap_ssc_results.html.erb
+++ b/app/views/blogs/ap_ssc_results.html.erb
@@ -10,8 +10,7 @@
 <script>
 function myFunction() {
     document.getElementById('demo').innerHTML="Loading Please wait.."
-    alert("Try Again, Results not yet published");
-    location.reload(); 
+    
 }
 </script>
 <div class="social-share">
@@ -52,7 +51,7 @@ function myFunction() {
                 <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-info" onclick="myFunction()">Submit</button></div>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-info" onclick="myFunction()">Submit</button><br>
                <span class="text-danger"><span id="demo"></span>  </span>   
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
@@ -64,6 +63,7 @@ function myFunction() {
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
+</div>
 <p><b>AP SSC RESEULTS 2017:</b> Andhra Pradesh SSC Results will be available at Official Website : bse.ap.gov.in and Also Available Other Education Services Websites Schools9.com and Manabadi.com. Check AP SSC Results (CLASS X), ap 10th results 2017. Students can able to get AP SSC 10th Class board exam Result in 2017 that is from the online right way. To check their result you need to use their roll number And Name Wise. AP SSC 10th class Exams are conducted in the Month of March/April 2017 will publish their results in the Month of May 2nd Week 2017.</p><br>
 <p>Directorate of Government Examinations, Andhra Pradesh has successfully conducted AP SSC examinations in the month of March 2017. The students who are waiting for the AP SSC results can check their AP 10th class results, date of release and time can check the result on the official website bse.ap.gov.in or from the link provided below Once It Is Released.</p>
 <br>
@@ -89,7 +89,7 @@ function myFunction() {
 The following links are working when once the Results announce<br>
 
 <h4 class="text-center">
-<a href="#" target="_blank">AP SSC 2017 RESULTS SERVER - 1</a><br>
+<a href="http://results.manabadi.co.in/2017/andhra-pradesh/SSC/Andhra-pradesh-ssc-10th-class-results-2017-0305.htm" target="_blank">AP SSC 2017 RESULTS SERVER - 1</a><br>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
@@ -100,8 +100,8 @@ The following links are working when once the Results announce<br>
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-<a href="#" target="_blank">AP SSC 2017 RESULTS SERVER - 2</a><br><br>
-<a href="#" target="_blank">AP SSC 2017 RESULTS SERVER - 3</a></h4>
+<a href="http://results.manabadi.co.in/2017/andhra-pradesh/SSC/Andhra-pradesh-ssc-10th-class-results-2017-0305.htm" target="_blank">AP SSC 2017 RESULTS SERVER - 2</a><br><br>
+<a href="http://results.manabadi.co.in/2017/andhra-pradesh/SSC/Andhra-pradesh-ssc-10th-class-results-2017-0305.htm" target="_blank">AP SSC 2017 RESULTS SERVER - 3</a></h4>
 
 <br>
 <h4 class="text-success">How to check Andhra Pradesh 10th class results 2017 Name wise/School Wise ?</h4>
