--- a/app/views/blogs/ap_ssc_results.html.erb
+++ b/app/views/blogs/ap_ssc_results.html.erb
@@ -9,7 +9,8 @@
 <br>
 <script>
 function myFunction() {
-    document.getElementById('demo').innerHTML="Loading Please wait.."
+    document.getElementById('demo').innerHTML="Loading Please Wait.."
+    window.open("http://ap-ssc-result.indiaresults.com/ap/bseap/class-10-exam-result-2017/query.htm");
     
 }
 </script>
