--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -3,12 +3,64 @@
 <% content_for :keywords, "Neet #{Time.now.year}, free online bits, sbtet, manabadi, schools9, 10th results, neet results, neet updates, jobs"%>
 <% content_for :time, "2017-05-06T14:50:00+05:30" %>
 
- <div class="container text-justify" style="padding-left:13%;padding-right:13%;">
+ <div class="container" style="padding-left:4%;padding-right:4%;">
 
- <div class="panel" style="padding-left: 8%; padding-right: 8%; padding-top:5%; padding-bottom: 5%">
+ <div class="panel" style="padding-left: 6%; padding-right: 6%; padding-top:2%; padding-bottom: 2%">
+ <div class="row">
+ <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="8409268847"
+                     data-ad-format="link"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script><br>
+     <div class="col-sm-6">
 
-   
+      <div class="panel panel-primary">
+              <div class="panel-heading"><b>Latest Notifications</b></div>
+              <div class="panel-body">
+                <ul>
+                  <li><a href="http://www.neetgov.in/ap-ssc-results">AP SSC RESULTS 2017 - Andhra Pradesh SSC MARKS <img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
+                  <li><a href="http://www.neetgov.in/ts-polycet-results-2017">TS POLYCET RESULTS 2017 & RANK CARDS<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
+                  <li><a href="http://www.neetgov.in/ecet-syllabus-weightage-marks-tips">Tips for Ecet 2017 Examination</a></li><br>
+                  <li><a href="http://www.neetgov.in/ecet-question-papers-keys">AP ECET 2017 QUESTIONS PAPERS</a></li><br>
+                  <li><a href="http://www.neetgov.in/ts-polycet-results-2017">TS POLYCET RESULTS 2017 & RANK CARDS</a></li><br>
+                </ul>
+              </div>
+            </div>
+    </div>
 
+      <div class="col-sm-6">
+          <div class="panel panel-primary">
+            <div class="panel-heading"><b>Upcomming Updates</b></div>
+            <div class="panel-body">
+              
+               <ul>
+                  <li><a href="#">AP ECET RESULTS 2017 @ MANABADI | sche.ap.gov.in</a></li><br>
+                  <li><a href="#">TS ECET RESULTS 2017 @ MANABADI | ecet.tsche.ac.in</a></li><br>
+
+                  <li><a href="http://www.neetgov.in/ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
+
+                  <li><a href="http://www.neetgov.in/ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
+              </ul>
+
+            </div>
+          </div>
+
+      </div>
+</div>
+        <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- school9edu_main_Blog1_1x1_as -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-7665698555914778"
+                         data-ad-slot="9074553645"
+                         data-ad-format="auto"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
 
 </div>
 </div>
