--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -30,7 +30,7 @@
           <div style="text-align: center">
           <a href="https://www.linkedin.com/in/sbtetworld-fast-results-79305a141/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
 
-            <a href="https://www.facebook.com/www.sbtetworld.in/" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
+            <a href="https://www.facebook.com/neetgov.in/" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
 
             <!-- <a href="https://plus.google.com/u/0/107659702751121090928" target="_blank"><i class="fa fa-google-plus-square" style="font-size:30px"></i></a> -->
             </div>
