--- a/app/views/layouts/_navbar2.html.erb
+++ b/app/views/layouts/_navbar2.html.erb
@@ -3,11 +3,20 @@
   <div class="col-md-4">
     <a href="/"><%= image_tag("sbtetworld.png")%></a>
   </div>
-  <br><br>
-    <!-- <div class="navbar-header">
-      <a class="navbar-brand" href="/"><h3><b>ONLINE EXAMINATION PORTAL</b><h3></a>
-    </div> -->
-    
+  <br>
+
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img border='0' src='https://4.bp.blogspot.com/-_LyKpSzBjyM/VEZ5fCRlKjI/AAAAAAAAAGY/pDPGv_1tT18B8CNzH8hEXLYoA1fYhwXtgCPcB/s1600/4656307_023cf425e1.gif'/>
+      <div id="fb-root"></div>
+      <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9&appId=174378936333428";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
+      <div class="fb-like" data-href="https://www.facebook.com/neetgov.in/" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+
       
     <ul class="nav navbar-nav navbar-right">
      <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
