--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -7,6 +7,8 @@
 
  <div class="panel" style="padding-left: 6%; padding-right: 6%; padding-top:2%; padding-bottom: 2%">
  <div class="row">
+ <h2 class="text-center">Welcome to neetgov.in</h2>
+ <p><b>Neetgov</b> provides all India entrance exam updates like notifications, results, important dates and other all India educational updates. <b>Neetgov</b> provides all latest and genuine updates portal. <b>Neet gov</b> also provides especially all India entrance free online test exams through computer based. </p>
  <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -22,11 +24,11 @@
               <div class="panel-heading"><b>Latest Notifications</b></div>
               <div class="panel-body">
                 <ul>
-                  <li><a href="http://www.neetgov.in/ap-ssc-results">AP SSC RESULTS 2017 - Andhra Pradesh SSC MARKS <img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
-                  <li><a href="http://www.neetgov.in/ts-polycet-results-2017">TS POLYCET RESULTS 2017 & RANK CARDS<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
-                  <li><a href="http://www.neetgov.in/ecet-syllabus-weightage-marks-tips">Tips for Ecet 2017 Examination</a></li><br>
-                  <li><a href="http://www.neetgov.in/ecet-question-papers-keys">AP ECET 2017 QUESTIONS PAPERS</a></li><br>
-                  <li><a href="http://www.neetgov.in/ts-polycet-results-2017">TS POLYCET RESULTS 2017 & RANK CARDS</a></li><br>
+                  <li><a href="/ap-ssc-results">AP SSC RESULTS 2017 - Andhra Pradesh SSC MARKS <img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
+                  <li><a href="/ts-polycet-results-2017">TS POLYCET RESULTS 2017 & RANK CARDS<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
+                  <li><a href="/ecet-syllabus-weightage-marks-tips">Tips for Ecet 2017 Examination</a></li><br>
+                  <li><a href="/ecet-question-papers-keys">AP ECET 2017 QUESTIONS PAPERS</a></li><br>
+                  <li><a href="/ts-polycet-results-2017">TS POLYCET RESULTS 2017 & RANK CARDS</a></li><br>
                 </ul>
               </div>
             </div>
@@ -41,9 +43,9 @@
                   <li><a href="#">AP ECET RESULTS 2017 @ MANABADI | sche.ap.gov.in</a></li><br>
                   <li><a href="#">TS ECET RESULTS 2017 @ MANABADI | ecet.tsche.ac.in</a></li><br>
 
-                  <li><a href="http://www.neetgov.in/ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
+                  <li><a href="/ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
 
-                  <li><a href="http://www.neetgov.in/ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
+                  <li><a href="/ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
               </ul>
 
             </div>
@@ -60,7 +62,76 @@
                          data-ad-format="auto"></ins>
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
+                    </script><br>
+  <div class="row">
+  <div class="col-sm-8">
+    <div class="panel panel-primary">
+           <div class="panel-heading text-center"><b>STATE WISE ENTRANCE EXAMS UPDATES</b></div>
+            <div class="panel-body">
+              <div class="col-sm-4">
+               <ul>
+                  <li><a href="#">Andhra Pradesh</a></li>
+                  <li><a href="#">Arunachal Pradesh</a></li>
+
+                  <li><a href="#">Assam</a></li>
+
+                  <li><a href="#">Bihar</a></li>
+                  <li><a href="#">Chhattisgarh</a></li>
+                  <li><a href="#">Delhi</a></li>
+                  <li><a href="#">Goa</a></li>
+                  <li><a href="#">Gujarat</a></li>
+                  <li><a href="#">Haryana</a></li>
+                  <li><a href="#">Himachal Pradesh</a></li>
+              </ul>
+
+            </div>
+
+             <div class="col-sm-4">
+              <ul>
+                  <li><a href="#">Jammu &amp; Kashmir</a></li>
+                  <li><a href="#">Jharkhand</a></li> 
+                  <li><a href="#">Karnataka</a></li> 
+                  <li><a href="#">Kerala</a></li>
+                  <li><a href="#">Madhya Pradesh</a></li> 
+                  <li><a href="#">Maharashtra</a></li> 
+                  <li><a href="#">Manipur</a></li> 
+                  <li><a href="#">Meghalaya</a></li> 
+                  <li><a href="#">Mizoram</a></li> 
+                  <li><a href="#">Nagaland</a></li> 
+                  </ul>
+
+            </div>
+          <div class="col-sm-4">
+            <ul>
+                <li><a href="#">Odisha</a></li>
+                <li><a href="#">Punjab</a></li> 
+                <li><a href="#">Rajasthan</a></li>
+                <li><a href="#">Sikkim</a></li> 
+                <li><a href="#">Tamil Nadu</a></li> 
+                <li><a href="#">Telangana</a></li>
+                <li><a href="#">Tripura</a></li> 
+                <li><a href="#">Uttar Pradesh</a></li> 
+                <li><a href="#">Uttarakhand</a></li> 
+                <li><a href="#">West Bengal</a></li>
+                </ul>
+
+          </div>
+        </div>
+         </div></div>
+         <div class="col-sm-4">
+         <div class="panel panel-primary">
+            <div class="panel-heading"><b>Advertisement</b></div>
+            <div class="panel-body">
+
+           <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:230px;max-width:1100px;width:100%;height:200px'></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+         </div>
+         </div>
+      </div>
+</div>
+
+
 
 </div>
 </div>
