--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -118,14 +118,19 @@
           </div>
         </div>
          </div></div>
-         <div class="col-sm-4">
-         
 
-           <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:250px;max-width:1100px;width:100%;height:300px'></ins>
-      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-         
-      </div>
+         <div class="col-sm-4">
+              <div class="panel panel-primary">
+           <!-- <div class="panel-heading text-center"><b>Advertisement</b></div> -->
+            <div class="panel-body">
+
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:240px'></ins>
+                  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+            </div>
+            </div>
+         </div>
 </div>
 
 
