--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -24,6 +24,7 @@
               <div class="panel-heading"><b>Latest Notifications</b></div>
               <div class="panel-body">
                 <ul>
+                  <li><a href="/ap-polycet-results-2017">AP POLYCET RESULTS 2017 & RANK CARDS <img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
                   <li><a href="/ap-ssc-results">AP SSC RESULTS 2017 - Andhra Pradesh SSC MARKS <img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
                   <li><a href="/ts-polycet-results-2017">TS POLYCET RESULTS 2017 & RANK CARDS<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
                   <li><a href="/ecet-syllabus-weightage-marks-tips">Tips for Ecet 2017 Examination</a></li><br>
