--- a/app/views/blogs/ap_polycet_results.html.erb
+++ b/app/views/blogs/ap_polycet_results.html.erb
@@ -1,5 +1,5 @@
-<% content_for :title, "AP POLYCET RESULTS 2017 | MANABADI @ polycetts.nic.in" %>
-<% content_for :description, "AP-POLYCET-RESULTS-2017 | MANABADI @ polycetts.nic.in"%>
+<% content_for :title, "AP POLYCET 2017 RESULTS @ Manabadi | polycetap.nic.in" %>
+<% content_for :description, "AP POLYCET 2017 RESULTS @ Manabadi | polycetap.nic.in"%>
 <% content_for :time, "2017-05-08T14:50:00+05:30" %>
 
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
@@ -10,13 +10,13 @@
 <div class="social-share">
     <h4>Share on</h4>
     
-            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ts-polycet-results-2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-twitter"></i><span> Twitter</span></a>
+            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ap-polycet-results-2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-twitter"></i><span> Twitter</span></a>
        
-            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ts-polycet-results-2017& t=TS-POLYCET-RESULTS-2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-facebook"></i><span> Facebook</span></a>
+            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ap-polycet-results-2017& t=AP-POLYCET-RESULTS-2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-facebook"></i><span> Facebook</span></a>
 
-            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ts-polycet-results-2017"  class="google-plus" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-google-plus"></i><span> Google+</span></a>
+            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ap-polycet-results-2017"  class="google-plus" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-google-plus"></i><span> Google+</span></a>
 
-            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ts-polycet-results-2017" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
+            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ap-polycet-results-2017" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
 </div>
 <!-- /.social-share -->
 <br><br>
@@ -37,19 +37,20 @@
                     </script>
 
 <br>
-<p><b>TS POLYCET RESULTS:</b> TS POLYCET was successfully conducted by state board technical education and training telangana. This examination is the prerequisite for admission into various professional courses offered in University/ Private Colleges in the state of Telangana.</p><br>
+<p><b>AP POLYCET RESULTS 2017:</b> State Board of Technical Education and Training Andhra Pradesh (SBTET AP) has effectively directed Polytechnic Common Entrance Test (POLYCET) in the time of April 2017. The exams were held in different focuses of the state for which lakhs of Students showed up. Presently, every one of the Students have been tensely sitting tight for the ap polycet comes about arrival of AP SBTET exam. The exam leading specialist has going to discharge the aftereffects of AP POLYCET RESULTS 2017 in the Month of May 2017.</p><br>
 
-<h3 class="text-center">TS POLYCET RESULTS 2017 @ MANABADI | POLYCETTS.NIC.IN 2017</h3>
+<h3 class="text-center">AP POLYCET 2017 RESULTS @ Manabadi | polycetap.nic.in</h3>
 
-<p><b>TS POLYCET:</b> A Common Entrance Test, designated as Diploma/ POlytechnic Common Entrance Test – 2017 (Ceep-2017) of Telangana will be conducted a exam for entry into the first year of the following diploma and other professional courses offered for the academic year 2017 – 2018 in the State of Telangana.</p>
+<p><b>AP POLYCET:</b> A Common Entrance Test, designated as Diploma/ POlytechnic Common Entrance Test – 2017 (Ceep-2017) of Andhra Pradesh will be conducted a exam for entry into the first year of the following diploma and other professional courses offered for the academic year 2017 – 2018 in the State of Andhra Pradesh.</p>
 <br>
-<p><b>TS POLYCET RESULTS 2017:</b> The results for the Telangana Diploma Engineering and other non Engineering Common Entrance Test (POLYCET) 2017 Will be declared soon May 6th Telangana POLYCET 2017 Exam Results Available NOW. Candidates who appeared for the Diploma/polytechnic engineering test can check there results here: TS POLYCET Results 2017.</p>
+<p>The State Board of Technical Education and Training, Andhra Pradesh, Vijayawada has Successfully conducted  “Polytechnic Common Entrance Test (POLYCET)” for the candidates seeking admission in to all Diploma Courses in Engineering / Non Engineering/Technology offered at Polytechnics / institutions (including Aided and Unaided Private Polytechnics / Institutions running as 2nd shift in Pvt. Engineering Colleges) in Andhra Pradesh State for the academic year 2017 - 2018.</p>
 <br>
-
+<p><b>AP POLYCET</b> Entrance exam results are declared at polycetap.nic.in. Results AP POLYCET 2017 Declared Will Be soon Today evening 5pm (08-05-2017) stay tune with us get your Polycet results 2017</p>
 <h4 class="text-center">Check Below Link For Information TS POLYCET 2017</h4>
 
 <h4 class="text-center">
-<a href="https://polycetts.nic.in/" target="_blank">TS POLYCET 2017 RESULTS</a></h4>
+<!-- <a href="https://polycetts.nic.in/" target="_blank">AP POLYCET 2017 RESULTS</a></h4> -->
+<a href="#" target="_blank">AP POLYCET 2017 RESULTS</a></h4>
 
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
@@ -62,21 +63,22 @@
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
 <h4 class="text-center">
-<a href="https://polycetts.nic.in/" target="_blank">DOWNLOAD TS POLYCET 2017 RANK CARDS</a></h4>
+<!-- <a href="https://polycetts.nic.in/" target="_blank">DOWNLOAD AP POLYCET 2017 RANK CARDS</a></h4> -->
+<a href="#" target="_blank">DOWNLOAD AP POLYCET 2017 RANK CARDS</a></h4>
 
 <br><br>
 <div class="text-success">
 <h5>
 <ul>
-    <li>ts polycet results 2017</li>
+    <li>ap polycet results 2017</li>
     <li>polycet manabadi results 2017</li>
-    <li>telangana polycet results 2017</li>
+    <li>andhra pradesh polycet results 2017</li>
     <li>manabadi polycet results 2017</li>
     <li>polycet 2017 results</li>
     <li>polycet results 2017 ts</li>
-    <li>ts polycet rank cards avaliable now</li>
-    <li>ts polycet exam results</li>
-    <li>ts polycet 2017 results </li>
+    <li>ap polycet rank cards avaliable now</li>
+    <li>ap polycet exam results</li>
+    <li>ap polycet 2017 results </li>
 </ul>
 </h5>
 
