--- a/app/views/blogs/ap_polycet_results.html.erb
+++ b/app/views/blogs/ap_polycet_results.html.erb
@@ -22,9 +22,9 @@
 <br><br>
 
 
-<div class="text-center" '>
+<div class="text-center">
 <h1>AP POLYCET RESULTS 2017</h1>
-<!-- <h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div> -->
+</div>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
@@ -36,7 +36,6 @@
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
 
-<br>
 <p><b>AP POLYCET RESULTS 2017:</b> State Board of Technical Education and Training Andhra Pradesh (SBTET AP) has effectively directed Polytechnic Common Entrance Test (POLYCET) in the time of April 2017. The exams were held in different focuses of the state for which lakhs of Students showed up. Presently, every one of the Students have been tensely sitting tight for the ap polycet comes about arrival of AP SBTET exam. The exam leading specialist has going to discharge the aftereffects of AP POLYCET RESULTS 2017 in the Month of May 2017.</p><br>
 
 <h3 class="text-center">AP POLYCET 2017 RESULTS @ Manabadi | polycetap.nic.in</h3>
@@ -46,11 +45,12 @@
 <p>The State Board of Technical Education and Training, Andhra Pradesh, Vijayawada has Successfully conducted  “Polytechnic Common Entrance Test (POLYCET)” for the candidates seeking admission in to all Diploma Courses in Engineering / Non Engineering/Technology offered at Polytechnics / institutions (including Aided and Unaided Private Polytechnics / Institutions running as 2nd shift in Pvt. Engineering Colleges) in Andhra Pradesh State for the academic year 2017 - 2018.</p>
 <br>
 <p><b>AP POLYCET</b> Entrance exam results are declared at polycetap.nic.in. Results AP POLYCET 2017 Declared Will Be soon Today evening 5pm (08-05-2017) stay tune with us get your Polycet results 2017</p>
-<h4 class="text-center">Check Below Link For Information TS POLYCET 2017</h4>
+<h4 class="text-center">Check Below Link For Information AP POLYCET 2017</h4>
 
 <h4 class="text-center">
 <!-- <a href="https://polycetts.nic.in/" target="_blank">AP POLYCET 2017 RESULTS</a></h4> -->
-<a href="#" target="_blank">AP POLYCET 2017 RESULTS</a></h4>
+<a href="#" target="_blank">AP POLYCET 2017 RESULTS</a>
+</h4>
 
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
@@ -64,7 +64,8 @@
                     </script>
 <h4 class="text-center">
 <!-- <a href="https://polycetts.nic.in/" target="_blank">DOWNLOAD AP POLYCET 2017 RANK CARDS</a></h4> -->
-<a href="#" target="_blank">DOWNLOAD AP POLYCET 2017 RANK CARDS</a></h4>
+<a href="#" target="_blank">DOWNLOAD AP POLYCET 2017 RANK CARDS</a>
+</h4>
 
 <br><br>
 <div class="text-success">
@@ -85,5 +86,4 @@
 </div>
 </div>
 
-</div>
 </div>
