--- a/app/views/blogs/ap_polycet_results.html.erb
+++ b/app/views/blogs/ap_polycet_results.html.erb
@@ -39,12 +39,21 @@
 <p><b>AP POLYCET RESULTS 2017:</b> State Board of Technical Education and Training Andhra Pradesh (SBTET AP) has effectively directed Polytechnic Common Entrance Test (POLYCET) in the time of April 2017. The exams were held in different focuses of the state for which lakhs of Students showed up. Presently, every one of the Students have been tensely sitting tight for the ap polycet comes about arrival of AP SBTET exam. The exam leading specialist has going to discharge the aftereffects of AP POLYCET RESULTS 2017 in the Month of May 2017.</p><br>
 
 <h3 class="text-center">AP POLYCET 2017 RESULTS @ Manabadi | polycetap.nic.in</h3>
+<script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="8409268847"
+                     data-ad-format="link"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
 
 <p><b>AP POLYCET:</b> A Common Entrance Test, designated as Diploma/ POlytechnic Common Entrance Test – 2017 (Ceep-2017) of Andhra Pradesh will be conducted a exam for entry into the first year of the following diploma and other professional courses offered for the academic year 2017 – 2018 in the State of Andhra Pradesh.</p>
 <br>
 <p>The State Board of Technical Education and Training, Andhra Pradesh, Vijayawada has Successfully conducted  “Polytechnic Common Entrance Test (POLYCET)” for the candidates seeking admission in to all Diploma Courses in Engineering / Non Engineering/Technology offered at Polytechnics / institutions (including Aided and Unaided Private Polytechnics / Institutions running as 2nd shift in Pvt. Engineering Colleges) in Andhra Pradesh State for the academic year 2017 - 2018.</p>
 <br>
-<p><b>AP POLYCET</b> Entrance exam results are declared at polycetap.nic.in. Results AP POLYCET 2017 Declared Will Be soon Today evening 5pm (08-05-2017) stay tune with us get your Polycet results 2017</p>
+<p><b>AP POLYCET</b> Entrance exam results are declared at polycetap.nic.in. Results AP POLYCET 2017 Declared Will Be soon Today evening 3:30pm (08-05-2017) stay tune with us get your Polycet results 2017</p>
 <h4 class="text-center">Check Below Link For Information AP POLYCET 2017</h4>
 
 <h4 class="text-center">
