--- a/app/views/blogs/ap_polycet_results.html.erb
+++ b/app/views/blogs/ap_polycet_results.html.erb
@@ -2,6 +2,31 @@
 <% content_for :description, "AP POLYCET 2017 RESULTS @ Manabadi | polycetap.nic.in"%>
 <% content_for :time, "2017-05-08T14:50:00+05:30" %>
 
+<style type="text/css">
+    #box {
+border: 2px double #000;
+outline-offset: -9px;
+}
+input[type=text] {
+   
+    background-color:#87CEFA;
+    color: white;
+}
+</style>
+
+<script>
+var myVar;
+function myFunction() {
+    document.getElementById('demo').innerHTML="Results not released yet, plz try after some time"
+    // window.open("http://ap-ssc-result.indiaresults.com/ap/bseap/class-10-exam-result-2017/query.htm");
+    setInterval(alertFunc, 4000);
+
+    function alertFunc() {
+        location.reload()
+    }   
+}
+</script>
+
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
  <div class="panel" style="padding-left: 8%; padding-right: 8%; padding-top:5%; padding-bottom: 5%">
@@ -25,6 +50,13 @@
 <div class="text-center">
 <h1>AP POLYCET RESULTS 2017</h1>
 </div>
+
+
+<p><b>AP POLYCET RESULTS 2017:</b> State Board of Technical Education and Training Andhra Pradesh (SBTET AP) has effectively directed Polytechnic Common Entrance Test (POLYCET) in the time of April 2017. The exams were held in different focuses of the state for which lakhs of Students showed up. Presently, every one of the Students have been tensely sitting tight for the ap polycet comes about arrival of AP SBTET exam. The exam leading specialist has going to discharge the aftereffects of AP POLYCET RESULTS 2017 in the Month of May 2017.</p><br>
+
+<div id="box"><br>
+<h3 class="text-center">POLYCET 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
+<p class="text-center"><b>Enter APPOLYCET-2017 Hall Ticket No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="hallticket"></b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="myFunction()">View Rank Card</button></p>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
@@ -35,9 +67,11 @@
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
+<p class="text-center text-danger"><b><span id="demo"></span></b></p>
+ </div>
+ <br>
 
-<p><b>AP POLYCET RESULTS 2017:</b> State Board of Technical Education and Training Andhra Pradesh (SBTET AP) has effectively directed Polytechnic Common Entrance Test (POLYCET) in the time of April 2017. The exams were held in different focuses of the state for which lakhs of Students showed up. Presently, every one of the Students have been tensely sitting tight for the ap polycet comes about arrival of AP SBTET exam. The exam leading specialist has going to discharge the aftereffects of AP POLYCET RESULTS 2017 in the Month of May 2017.</p><br>
-
+</table>
 <h3 class="text-center">AP POLYCET 2017 RESULTS @ Manabadi | polycetap.nic.in</h3>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
